# slasyz_ru

./: .gitignore  Caddyfile  Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  config.default.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  podman-compose.yml  slasyz_ru.service
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  config-composer.json  config-default.json  pylintrc  requirements.txt
backend/slasyz_ru/: config.py  main.py  models.py
backend/slasyz_ru/db/: __init__.py  calories.py  cookies.py  sessions.py
backend/slasyz_ru/handlers/: calories.py  index.py
backend/slasyz_ru/server/: main.py
backend/templates/: app.html  index.html
backend/templates/admin/: sessions.html
caddy/: Caddyfile.local  Caddyfile.prod
database/: Dockerfile
database/migrations/: 0001-schema.sql
frontend/: .gitignore  Dockerfile.dev  Dockerfile.prod  nginx-prod.conf.template  nginx.conf.template  package.json  webpack.config.js
frontend/src/: router.js
frontend/src/app/: App.vue  app-client.js  app.js  router.js
frontend/src/components/: Topbar.vue
frontend/src/pages/: index.js  index.scss
gateway/: Dockerfile  nginx.conf.template
root/: index.html
root/cv/: index.html
root/ref/: index.html
scripts/: deploy.sh  install.sh
src/: config.rs  jwt.rs  lib.rs  main.rs  server.rs  toxic.rs
src/handlers/: errors.rs  handler_test.rs  handler_toxic.rs  mod.rs  toxic_handler.rs
src/middleware/: middleware_auth.rs  middleware_log.rs  mod.rs
src/routes/: mod.rs
(+10 files in other folders)
