[package]
name = "slasyz_ru"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = "0.4"
colored = "2"
fern = "0.6"
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
