[package]
name = "slasyz_ru"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.10", features = ["attributes"] }
chrono = "0.4"
colored = "2"
fern = "0.6"
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2.3"
tide = { version = "0.16", features = ["logger"] }
